MOD: ZEPortalMap and it's subsidiaries are renamed to ZEInterior, ZEInteriorRoom and ZEInteriorDoor respectively. 3dsMax exporters and scripts are changed accordingly. Several changes made in other projects according to this. MOD: ZEInteriorResource has had revision and changes are made in several other projects according to this. MOD: ZEMath commit concerning Equals functions from trunk.
svn path=/branches/v0.5.5-NewTools/; revision=1131

--- a/Source/ZEEngine/ZEMap/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMap/CMakeLists.txt
@@ -35,7 +35,7 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_subdirectory (ZEPortalMap)
+add_subdirectory (ZEInterior)
 
 ze_add_source(ZEMap.cpp				Sources)
 ze_add_source(ZEMap.h				Sources Headers)
