--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -72,7 +72,7 @@ ze_add_source(ZESDK.cpp 					Sources)
 ze_add_library(ZEEngineAPI 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZECore ZEGraphics ZEInput ZEMeta ZEPhysics ZESound ZEUI ZEGame ZEMap ZEPortalMap ZEModel ZEParticle ZEAI ZETerrain ZENetwork ZETexture ZEModules
+	LIBS ZECore ZEGraphics ZEInput ZEMeta ZEPhysics ZESound ZEUI ZEGame ZEMap ZEInterior ZEModel ZEParticle ZEAI ZETerrain ZENetwork ZETexture ZEModules
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI"
 	INSTALL_COMPONENT ZESDK)
