REM: ZEMap project removed from ZEEngine. Changes made in several projects according to this. REM: An old prototype of ZEInterior, ZEPortal removed from ZEGame.
svn path=/branches/v0.5.5-NewTools/; revision=1133

--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -51,7 +51,7 @@ add_subdirectory(ZEGame)
 add_subdirectory(ZEGraphics)
 add_subdirectory(ZETexture)
 add_subdirectory(ZEInput)
-add_subdirectory(ZEMap)
+add_subdirectory(ZEInterior)
 add_subdirectory(ZEMeta)
 add_subdirectory(ZEModel)
 add_subdirectory(ZEParticle)
@@ -72,7 +72,7 @@ ze_add_source(ZESDK.cpp 					Sources)
 ze_add_library(ZEEngineAPI 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZECore ZEGraphics ZEInput ZEMeta ZEPhysics ZESound ZEUI ZEGame ZEMap ZEInterior ZEModel ZEParticle ZEAI ZETerrain ZENetwork ZETexture ZEModules
+	LIBS ZECore ZEGraphics ZEInput ZEMeta ZEPhysics ZESound ZEUI ZEGame ZEInterior ZEInterior ZEModel ZEParticle ZEAI ZETerrain ZENetwork ZETexture ZEModules
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI"
 	INSTALL_COMPONENT ZESDK)
