ADD: External plug-in loading mechanisms added to ZEPluginManager. ADD: ze_add_plugin command added to CMake scripts. IMP: CMake scripts are modified to put all compiled executables to the Rundir. IMP: CMake scripts are modified to put all compiled plugins to the Rundir/Plugins. ADD: ZED3D9Plugin class has been added. ADD: Compile definitions added to detect whether building engine itself or a plugin. ZEDLL.h header has been modified. CHG: Combined static library ZEEngineAPI has been renamed to ZEEngine. ADD: New combined static library ZEEnginePlugin has been added to be used on plugins.
svn path=/trunk/; revision=1136

--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -69,17 +69,25 @@ ze_add_source(ZESDK.h 						Sources Headers)
 ze_add_source(ZESDK.cpp 					Sources)
 
 
-ze_add_library(ZEEngineAPI 
+ze_add_library(ZEEngine 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	LIBS ZECore ZEGraphics ZEInput ZEMeta ZEPhysics ZESound ZEUI ZEGame ZEMap ZEPortalMap ZEModel ZEParticle ZEAI ZETerrain ZENetwork ZETexture ZEModules
 	INSTALL
-	INSTALL_DESTINATION "ZEEngineAPI"
+	INSTALL_DESTINATION "ZEEngine"
 	INSTALL_COMPONENT ZESDK)
-	
+
+ze_add_library(ZEEnginePlugin 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	LIBS ZEFoundation ZECore ZEMeta
+	INSTALL
+	INSTALL_DESTINATION "ZEPlugin"
+	INSTALL_COMPONENT ZESDK)
+		
 ze_add_executable(ZE 
 	SOURCES ${Sources} ZEMain.cpp ZECore/ZEWindowResources.rc
-	LIBS ZEEngineAPI
+	LIBS ZEEngine
 	INSTALL
 	INSTALL_DESTINATION Bin
 	INSTALL_COMPONENT Runtime)
