--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -100,5 +100,5 @@ ze_add_library(ZECore
 	HEADERS ${Headers}
 	LIBS ZEFoundation
 	INSTALL
-	INSTALL_DESTINATION "ZEEngineAPI/ZECore"
+	INSTALL_DESTINATION "ZEEngine/ZECore"
 	INSTALL_COMPONENT ZESDK)
