--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -84,5 +84,5 @@ ze_add_library(ZEGame
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZEEngineAPI/ZEGame"
+	INSTALL_DESTINATION "ZEEngine/ZEGame"
 	INSTALL_COMPONENT ZESDK)
