--- a/Source/ZEEngine/ZEInput/CMakeLists.txt
+++ b/Source/ZEEngine/ZEInput/CMakeLists.txt
@@ -57,5 +57,5 @@ ze_add_library(ZEInput
 	HEADERS ${Headers}
 	LIBS ZEFoundation
 	INSTALL
-	INSTALL_DESTINATION "ZEEngineAPI/ZEInput"
+	INSTALL_DESTINATION "ZEEngine/ZEInput"
 	INSTALL_COMPONENT ZESDK)
