--- a/Source/ZEEngine/ZEMap/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMap/CMakeLists.txt
@@ -47,5 +47,5 @@ ze_add_library(ZEMap
 	HEADERS ${Headers}
 	LIBS ZEFoundation
 	INSTALL
-	INSTALL_DESTINATION "ZEEngineAPI/ZEMap"
+	INSTALL_DESTINATION "ZEEngine/ZEMap"
 	INSTALL_COMPONENT ZESDK)
