--- a/Source/ZEEngine/ZEUI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEUI/CMakeLists.txt
@@ -87,5 +87,5 @@ ze_add_library(ZEUI
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZEEngineAPI/ZEUI"
+	INSTALL_DESTINATION "ZEEngine/ZEUI"
 	INSTALL_COMPONENT ZESDK)
