--- a/Source/ZEEngine/ZEMeta/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMeta/CMakeLists.txt
@@ -59,5 +59,5 @@ ze_add_library(ZEMeta
 	HEADERS ${Headers}
 	LIBS ZEFoundation
 	INSTALL
-	INSTALL_DESTINATION "ZEEngineAPI/ZEMeta"
+	INSTALL_DESTINATION "ZEEngine/ZEMeta"
 	INSTALL_COMPONENT ZESDK)
