CHG: trunk now uses latest ZEPlatform external. Revision cap on ZEPlatform external property has been removed. IMP: Many improvements has been made on ZEBuild CMake scripts. ADD: Output directory, which contains produced target outputs, has been added. FIX: ze_add_source ZEFC flag has been fixed. IMP: ze_add_source ZEPP now generates ZEMeta.cpp files on binary directory instead of source directory. CHG: ZEBuild system has been migrated to two argument taking ZEPP.exe. CHG: ze_add_executive, ze_add_library and ze_add_plugin command's INSTALL flag now copies output to Output directory. You can use DESTINATION flag to control destination path inside Output directory. REM: ze_add_executive, ze_add_library and ze_add_plugin command's INSTALL_DESTINATION and INSTALL_COMPONENT flags has been removed.
svn path=/trunk/; revision=1143

--- a/Source/ZE3dsMax/ZE3dsMapExporter/CMakeLists.txt
+++ b/Source/ZE3dsMax/ZE3dsMapExporter/CMakeLists.txt
@@ -39,13 +39,13 @@ ze_add_source(ZE3dsMapExporterDLLEntry.cpp		Sources)
 ze_add_source(ZE3dsMapExporterDLLEntry.h		Sources)
 ze_add_source(ZE3dsMapExporter.h				Sources)
 ze_add_source(ZE3dsMapExporter.cpp				Sources)
-ze_add_source(ZE3dsMapExporterDescription.h		Sources)
+ze_add_source(ZE3dsMapExporterDescription.h		Sources ZEFC)
 ze_add_source(ZE3dsMapExporterDescription.cpp	Sources)
 ze_add_source(ZE3dsMapExporterProcess.cpp		Sources)
 ze_add_source(ZE3dsMapExporterOptions.h			Sources)
 ze_add_source(ZE3dsMapExporterOptions.cpp		Sources)
-ze_add_source(ZEMapExporterOptionsDialog.h			Sources QtMocs)
-ze_add_source(ZEMapExporterOptionsDialog.cpp			Sources)
+ze_add_source(ZEMapExporterOptionsDialog.h		Sources QtMocs)
+ze_add_source(ZEMapExporterOptionsDialog.cpp	Sources)
 ze_add_source(ZE3dsMapExporterResources.rc		Sources)
 ze_add_source(ZE3dsMapExporterResources.h		Sources)
 ze_add_source(ZE3dsMapExporter.def				Sources)
@@ -61,8 +61,6 @@ ze_add_library(ZE3dsMapExporter
 	LIBS ZEFoundation ZEToolAPI ZE3dsProgressDialog
 		core geom gfx mesh maxutil maxscrpt paramblk2 igame QtCore4 QtGui4 QWinWidget ZEProgressDialog
 	INSTALL
-	INSTALL_DESTINATION "Tools/Exporters/ZE3dsMax"
-	INSTALL_COMPONENT Tools
 	DLL)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
