--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -83,6 +83,4 @@ ze_add_source(ZEWeather.h				Sources Header)
 ze_add_library(ZEGame 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	INSTALL
-	INSTALL_DESTINATION "ZEEngine/ZEGame"
-	INSTALL_COMPONENT ZESDK)
+	INSTALL)
