--- a/Source/ZEEngine/ZETerrain/CMakeLists.txt
+++ b/Source/ZEEngine/ZETerrain/CMakeLists.txt
@@ -46,6 +46,4 @@ ze_add_library(ZETerrain
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	LIBS ZEFoundation
-	INSTALL
-	INSTALL_DESTINATION "ZEEngine/ZETerrain"
-	INSTALL_COMPONENT ZESDK)
+	INSTALL)
