--- a/Source/ZEFoundation/ZEThread/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEThread/CMakeLists.txt
@@ -58,9 +58,7 @@ ze_add_library(ZEThread
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
 	LIBS ZEFoundation 
-	INSTALL
-	INSTALL_DESTINATION ZEFoundation/ZEThread
-	INSTALL_COMPONENT ZESDK)
+	INSTALL)
 
 ze_add_test(ZEThreadTests
 	SOURCES ${Tests}
