--- a/Source/ZEToolSDK/ZETModelFile/CMakeLists.txt
+++ b/Source/ZEToolSDK/ZETModelFile/CMakeLists.txt
@@ -43,6 +43,4 @@ ze_add_source(ZETModelFileFormat.cpp	Sources)
 ze_add_library(ZETModelFile 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	INSTALL
-	INSTALL_DESTINATION "ZEToolAPI/ZETModelFile"
-	INSTALL_COMPONENT ZESDK)
+	INSTALL)
