--- a/Source/ZEFoundation/ZESerialization/CMakeLists.txt
+++ b/Source/ZEFoundation/ZESerialization/CMakeLists.txt
@@ -49,6 +49,4 @@ ze_add_source(ZEFileUnserializer.h		Sources Headers)
 ze_add_library(ZESerialization 
 	SOURCES ${Sources} 
 	HEADERS ${Headers} 
-	INSTALL
-	INSTALL_DESTINATION ZEFoundation/ZESerialization
-	INSTALL_COMPONENT ZESDK)
+	INSTALL)
