--- a/Source/ZEFoundation/ZETask/CMakeLists.txt
+++ b/Source/ZEFoundation/ZETask/CMakeLists.txt
@@ -45,6 +45,4 @@ ze_add_source(ZETask.h           		Sources Headers)
 ze_add_library(ZETask
 	SOURCES ${Sources} 
 	HEADERS ${Headers} 
-	INSTALL
-	INSTALL_DESTINATION ZEFoundation/ZETask
-	INSTALL_COMPONENT ZESDK)
+	INSTALL)
