FIX: CMake scripts that produces output directory.
svn path=/trunk/; revision=1144

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -82,5 +82,4 @@ ze_add_source(ZEWeather.h				Sources Header)
 
 ze_add_library(ZEGame 
 	SOURCES ${Sources}
-	HEADERS ${Headers}
-	INSTALL)
+	HEADERS ${Headers})
