--- a/Source/ZEEngine/ZEGraphics/ZEPostProcessor/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEPostProcessor/CMakeLists.txt
@@ -60,5 +60,4 @@ ze_add_source(ZEPPVelocityInputNode.h		Sources Headers)
 
 ze_add_library(ZEPostProcessor 
 	SOURCES ${Sources}
-	HEADERS ${Headers}
-	INSTALL)
+	HEADERS ${Headers})
