--- a/Source/ZEEngine/ZEMap/ZEPortalMap/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMap/ZEPortalMap/CMakeLists.txt
@@ -51,5 +51,4 @@ ze_add_source(ZEPortalMapResource.h			Sources Headers)
 ze_add_library(ZEPortalMap 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZEFoundation
-	INSTALL)
+	LIBS ZEFoundation)
