--- a/Source/ZEEngine/ZEPhysics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEPhysics/CMakeLists.txt
@@ -61,5 +61,4 @@ ze_add_source(ZEPhysicsDebugModule.h	        Sources)
 ze_add_library(ZEPhysics 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZEFoundation
-	INSTALL)
+	LIBS ZEFoundation)
