--- a/Source/ZEEngine/ZEUI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEUI/CMakeLists.txt
@@ -85,5 +85,4 @@ ze_add_source(ZEUIPortalMapStatisticsControl.h		Sources Headers)
 ze_add_library(ZEUI
 	LIBS ZEFoundation 
 	SOURCES ${Sources}
-	HEADERS ${Headers}
-	INSTALL)
+	HEADERS ${Headers})
