--- a/Source/ZEFoundation/ZESerialPort/CMakeLists.txt
+++ b/Source/ZEFoundation/ZESerialPort/CMakeLists.txt
@@ -43,5 +43,4 @@ ze_add_source(ZESerialPort_Unix.cpp			Sources PLATFORMS Unix)
 ze_add_library(ZESerialPort 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
-	LIBS ZEFoundation
-	INSTALL)
+	LIBS ZEFoundation)
