--- a/Source/ZEFoundation/ZESocket/CMakeLists.txt
+++ b/Source/ZEFoundation/ZESocket/CMakeLists.txt
@@ -47,8 +47,7 @@ ze_add_source(ZESocket.h					Sources Headers)
 ze_add_library(ZESocket 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
-    LIBS ZEFoundation
-	INSTALL)
+    LIBS ZEFoundation)
 	
 ze_add_test(ZESocketTests
 	SOURCES ${Tests}
