--- a/Source/ZEFoundation/ZEStateMachine/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEStateMachine/CMakeLists.txt
@@ -42,5 +42,4 @@ ze_add_source(ZEStateMachine.h			Sources Headers)
 
 ze_add_library(ZEStateMachine
 	SOURCES ${Sources} 
-	HEADERS ${Headers} 
-	INSTALL)
+	HEADERS ${Headers})
