--- a/Source/ZEToolSDK/ZETCommon/CMakeLists.txt
+++ b/Source/ZEToolSDK/ZETCommon/CMakeLists.txt
@@ -40,5 +40,4 @@ ze_add_source(ZETResourceFilePart.h		Sources Headers)
 
 ze_add_library(ZETCommon 
 	SOURCES ${Sources}
-	HEADERS ${Headers}
-	INSTALL)
+	HEADERS ${Headers})
