ADD: ZEPhysicalCloth and ZEPhysXPhysicalCloth files added.
svn path=/trunk/; revision=1147

--- a/Source/ZEEngine/ZEPhysics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEPhysics/CMakeLists.txt
@@ -37,6 +37,8 @@ cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZEPhysicalCallbacks.cpp			Sources)
 ze_add_source(ZEPhysicalCallbacks.h				Sources Headers)
+ze_add_source(ZEPhysicalCloth.cpp				Sources)
+ze_add_source(ZEPhysicalCloth.h					Sources Headers)
 ze_add_source(ZEPhysicalJoint.cpp				Sources)
 ze_add_source(ZEPhysicalJoint.h					Sources Headers)
 ze_add_source(ZEPhysicalMaterial.cpp			Sources)
